fix search input overlapping logo on mobile
add logo implementation

minor design adjustments

implement matchMedia to toggle logo based on light/dark color scheme

integrate inter font

update search input: now close the search will only reload the current filtered list

update text colors for better readability

--- a/css/header.css
+++ b/css/header.css
@@ -6,8 +6,20 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin: 1.6rem 0;
 }
-h1 {
+.header__logo{
+	display: flex;
+	align-items: center;
+	gap: 0.4rem;
+}
+.header__logo img{
+	width: 3.2rem;
+	height: 3.2rem;
+	object-fit: cover;
+}
+
+.header__logo h1 {
 	padding: 0 0.4rem;
 	font-size: var(--font-xxlarge);
 	line-height: 1.1;
@@ -16,7 +28,7 @@ h1 {
 .search__container {
 	--search-buttons-size: 3.6rem;
 	flex: 1;
-	height: 100%;
+	min-height: calc(var(--font-normal) * 3);
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
@@ -66,6 +78,7 @@ h1 {
 }
 .search__input {
 	border: none;
+	height: 100%;
 	outline: none;
 	background-color: transparent;
 	font-size: var(--font-normal);
@@ -84,7 +97,6 @@ h1 {
 	border-radius: var(--bdr-rd);
 }
 /**********/
-
 .category__list {
 	display: flex;
 	flex-flow: row wrap;
@@ -139,4 +151,17 @@ h1 {
 .c__urgent {
 	background-color: var(--category-urgent-color);
 }
+.c__leisure{
+	background-color: var(--category-leisure-color);
+}
 /******/
+
+@media (width < 400px){
+	.search__container, .search__wrapper, .search__wrapper > input{ 
+		width: 100%;
+	}
+	.header__logo:has(+ .search__container > .search__wrapper--visible){
+		display: none;
+	}
+	
+}
